add: gatsby-plugin-google-gtag update: /workspaces/portfolio/content/pages/about/index.mdx

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -3,6 +3,169 @@ title: About
 slug: "/about"
 ---
 
+English | [日本語](Index_ja.md)
+
 Hi!
 
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+My name is Yuuki.
+
+I'm a full-time infrastructure/network/server engineer working in Tokyo.
+And I develop software in weekend on Github.
+
+I am always looking for new and exciting services and software.
+If you have any recommended services, please share them with me!
+
+## 📎Work career
+
+### 🌐Infra Development - Network
+
+I've design,build and replace Network for Enterprise by AWS, Azure and on-premises.
+
+Specifically,
+
+- Replace Cisco's L2 Switch and Router on-premises
+- Design/Build Hybrid Cloud Network for Enterprise on AWS
+- Azure
+- VPN
+
+### 🖥Infra Development - Server
+
+I've design,build and replace Servers for Enterprise by AWS, Azure and on-premises.
+
+Specifically,
+
+- Design/Build Proxy Server by Squid in Amazon Linux
+- Design/Build Web Server by Nginx in Amazon Linux
+- Design/Build/Replace/Operation Zabbix Server in RHEL 8/9, CentOS 8/9 and Alma Linux
+- Design/Build/Operation ESXi server
+- Design/Build/Operation Network Appliance server on Azure
+- Design/Build/Operation API server on Azure
+
+### Software Development
+
+I'm just developing some applications right now.
+Details will be on the this page in the future.
+
+## 📎Skills
+
+### Frontend
+
+### Backend
+
+### Infra - Server
+
+I used to develop some services on **Linux**.
+Often I've developed these distributes **RHEL**(Red hat Linux for Enterprise)8-9, **CentOS** 7-8, **Alma Linux** 8, **Amazon Linux** 8...etc
+
+Developed/Built
+
+**DNS**(bind, named-chroot) : aaaaa
+
+**Proxy**(squid): aaaaa
+
+**Web**(apache,nginx): aaaaa
+
+**Monitoring service**(zabbix): aaaaa
+
+
+### Infra - Network
+
+### languages
+
+#### Python
+
+aaaa sample text
+
+#### Go
+
+aaaa sample text
+
+#### Dart
+
+aaaa sample text
+
+#### JavaScript
+
+aaaa sample text
+
+#### Shellscript
+
+aaaa sample text
+
+### Others
+
+#### Github
+
+Version control systems
+
+#### Contentful
+
+Headless CMS
+
+#### Hosting Services
+
+##### Github Pages
+
+This Web site is provided by Github Pages. Source code is here.
+
+##### Netlify
+
+I built a homepage as an illustrator using Netlify. Source code is here.
+
+##### Vercel
+
+I built a blog using Vercel and Notion. Source code is here.
+
+##### Cloudflare Pages
+
+aaaa
+
+#### Firebase, Heroku
+
+#### CloudFlare
+
+DNS CDN
+
+#### Flutter
+
+Gatsby React.js
+
+## 📎Certifications
+
+### IPA(Information-technology Promotion Agency, Japan)
+
+- FE(Fundamental Information Technology Engineer Examination)
+
+### Cisco Network
+
+- CCNA(Cisco Certified Network Associate)
+
+### Linux
+
+- LPIC-1(Linux Professional Institute Certification )
+
+### Microsoft
+
+- Microsoft Azure Administrator
+
+### Amazon Web Services
+
+- AWS Solution Architect Associate
+
+
+## 📎🎓Education
+
+| Degree | Major | University | Term |
+| :----: | :----: | :----: | :----: |
+| Bachelor | Economics| Kyoto Sangyo Uni.| 2016 - 2020 |
+| Master | Computer Science | Illinois Uni. | 2023 - |
+
+
+## 📎Lastly,
+
+To be honest, I have been studying English but I am not very good at it.
+If you can speak Japanese, I would be happy if you could speak to me in Japanese.:)
+
+Regard.
+
+Yuki Takagi
