Update contents files

--- a/content/pages/about/index_ja.mdx
+++ b/content/pages/about/index_ja.mdx
@@ -1,9 +1,6 @@
----
-title: About
-slug: "/about"
----
+# About
 
-English | [日本語](./about/index_ja.mdx)
+[English](index.mdx) | 日本語
 
 Hi.I'm Yuuki.
 
@@ -82,10 +79,9 @@ aaaa sample text
 
 #### Go
 aaaa sample text
-<--!
+
 #### Dart
 多分消す予定(Flutterを使ったアプリ制作にDartを使うかどうか確認する。使わないなら消す)
---!>
 
 #### JavaScript/TypeScript
 このwebサイトや開発したWebアプリケーションのフロントエンド開発に使用しました。
